--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio-react",
+  "homepage": "https://yncy0.github.io/portfolio-react/" ,
   "private": true,
   "version": "0.0.0",
   "type": "module",
